<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LJRemote</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="toggle">Toggle</string>
    <string name="menu_testjson">Json RPC</string>
    <string name="server_mode_unbound">No server</string>
    <string name="server_mode_bound">Bound to server</string>
    <string name="server_mode_driver">Driving LJ</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="drive">Drive</string>
    <string name="undrive">Stop Drive</string>
    <string name="up_all">Up All</string>
    <string name="clear_all">Clear All</string>
    <string name="load_cue">Load Cue</string>
    <string name="black_out">BLACK OUT</string>
    <string name="ljfunctions">LJ Functions</string>
    <string name="emptyTabHost">No data for now</string>
    <string name="fName_DmxOut">DMX Out</string>
    <string name="sync">Synchronise</string>
    <string name="sync_short">SYNC</string>
    <string name="hideExistingChannels">Hide Existing Channels</string>
    <string name="dmx_out_add_dialog_title">Add/Remove DMXOut Channes</string>
    <string name="add_selected">Add Selected</string>
    <string name="load_cuelist">Load Cue List</string>
    <string name="max_channels">Max Channels</string>
    <string name="default_value">Default  Value</string>


</resources>