<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top" >

    <RelativeLayout
        android:id="@+id/serverLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/server_status_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:padding="4dp"
            android:src="@drawable/ic_menu_cycle_red" />

        <TextView
            android:id="@+id/server_status_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/server_status_icon"
            android:layout_toRightOf="@+id/server_status_icon"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/server_status_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/server_connect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connect" />

            <Button
                android:id="@+id/server_setting_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_settings" />

        </LinearLayout>

        <TextView
            android:id="@+id/server_status_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignLeft="@+id/server_status_large"
            android:layout_alignParentRight="true"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/driverLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/serverLayout" >

        <ImageView
            android:id="@+id/driver_status_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:padding="4dp"
            android:src="@drawable/ic_menu_cycle_red" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/driver_status_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/driver_drive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/drive" />

            <Button
                android:id="@+id/driver_setting_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/menu_settings" />

        </LinearLayout>

        <TextView
            android:id="@+id/driver_status_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/driver_status_icon"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/driver_status_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearLayout01"
            android:layout_alignLeft="@+id/driver_status_large"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/driver_status_large"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>